--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,27 @@ django-cors-headers = "^4.2.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2-binary = "^2.9.7"
 
+[tool.poetry.group.lint]
+optional = true
+
+[tool.poetry.group.lint.dependencies]
+black = "^23.7.0"
+flake8 = "5.0.4"
+flake8-docstrings = "^1.7.0"
+isort = "^5.12.0"
+pre-commit = "^3.3.3"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.0"
+pytest-mock = "^3.11.1"
+pytest-sugar = "^0.9.7"
+pytest-cov = "^4.1.0"
+pytest-randomly = "^3.13.0"
+pytest-clarity = "^1.0.1"
+faker = "^19.3.0"
+pytest-django = "^4.5.2"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
