--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,40 @@ factory-boy = "^3.3.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  | dist
+  | .pytest_cache
+  | .tox
+  | docs
+  | docs_src
+  | .venv
+  | .mypy_cache
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip_glob = []
+
+[tool.pytest.ini_options]
+# === Pytest ===
+DJANGO_SETTINGS_MODULE = "tests.settings"
+pythonpath = [".", "portfolio"]
+norecursedirs = ["env", ".env", ".env", "migrations", "venv"]
+testpaths = ["tests",]
+console_output_style = "progress"
+python_files = "test_*"
+python_classes = "Test*"
+python_functions = "test_*"
+
+# === Pytest ===
