--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ coreapi = "^2.3.3"
 django-cors-headers = "^4.2.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2-binary = "^2.9.7"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.lint]
 optional = true
