dev-test created tests settings module, corrected pytest ini section in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,8 +70,8 @@ skip_glob = []
 [tool.pytest.ini_options]
 # === Pytest ===
 DJANGO_SETTINGS_MODULE = "tests.settings"
-pythonpath = [".", "portfolio"]
-norecursedirs = ["env", ".env", ".env", "migrations", "venv"]
+pythonpath = [".", "api"]
+norecursedirs = ["env", ".env", "migrations", "venv"]
 testpaths = ["tests",]
 console_output_style = "progress"
 python_files = "test_*"
