--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-cors-headers = "^4.2.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2-binary = "^2.9.7"
 pyyaml = "^6.0.1"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.lint]
 optional = true
