--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "social-network"
+name = "social_network"
 version = "0.1.0"
 description = ""
 authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
 readme = "README.md"
-packages = [{include = "social_network"}]
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.8"
