--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,19 @@ services:
     ports:
       - '8778:5432'  # required to access DB from host system
 
+  web:
+    build:
+      context: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./:/usr/src/app/
+    ports:
+      - '8000:8000'
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+
+
 volumes:
   database-data:
