--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,22 @@ services:
     command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./:/usr/src/app/
-    ports:
-      - '8000:8000'
+#    ports:
+#      - '8000:8000'
+    expose:
+      - 8000
     env_file:
       - .env
     depends_on:
       - postgres
+
+  nginx:
+    build:
+      context: ./nginx/
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
 
 
 volumes:
