--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,9 +4,14 @@ upstream network_api {
 
 server {
     listen 80;
+
     location / {
         proxy_pass http://network_api;
         proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+    }
+
+    location /static/ {
+        alias /home/app/static/;
     }
 }
