dev changed server_name in nginx.default.conf, added command, changed docker-compose.yml version

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,6 +4,7 @@ upstream network_api {
 
 server {
     listen 80;
+    server_name 16.171.24.105;
 
     location / {
         proxy_pass http://network_api;
